--- a/client/package.json
+++ b/client/package.json
@@ -3,8 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "proxy": "http://localhost:3001/",
+  "secure": false,
   "dependencies": {
     "@apollo/react-hooks": "^3.1.3",
+    "@reduxjs/toolkit": "^1.6.1",
     "@stripe/stripe-js": "^1.17.1",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
@@ -16,8 +18,10 @@
     "jwt-decode": "^2.2.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-redux": "^7.2.5",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.4.1"
+    "react-scripts": "3.4.1",
+    "redux": "^4.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
